# Measuring-Vibrations

./: .gitignore  AccelDriver.v  LED_Debug.v  MeasuringVibrations.qpf  MeasuringVibrations.qsf  MeasuringVibrations.qws  MeasuringVibrations.sdc  MeasuringVibrations.v  README.md  SPIMaster.v  SPIRegRead.v  SPIRegWrite.v  SPIRegWritetb.v  tb_FFT.v
FPGA/: AccelDriver.v  FIFO.v  MeasuringVibrations.qsf  MeasuringVibrations.v  MeasuringVibrations_assignment_defaults.qdf  RAM.v  SPIMaster.v  SPIRegRead.v  SPIRegWrite.v  SPIRegWritetb.v  SimpleSPISlave.v  UARTDriver.v  tb_FIFO.v  tb_LED_Debug.v  tb_MeasuringVibrations.v  tb_SimpleSPISlave.v  tb_UARTDriver.v  tb_UARTDriver_Overfill.v
FPGA/fft-core/: bimpy.v  cmem_16.hex  cmem_8.hex  fftmain.v  longbimpy.v
FPGA/uart/: helloworld.v
MCU/: CMakeLists.txt  MeasuringVibrations.cpp  QTGUI.cpp  QTGUI.hpp  UARTDriver.cpp  UARTDriver.hpp
fft-core/: fftstage.v
